Add Video apresentação/Hello there!
+container-apresentacao: texto e video

Outros:
=diferentes tags usando id->class
+.gitignore
+estilo "default" de botões
-estilo botão register

--- a/web/css/body.scss
+++ b/web/css/body.scss
@@ -12,4 +12,17 @@ body {
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
+
+    & .container-apresentacao {
+        display: flex;
+        gap: 3rem;
+        align-items: center;
+        & h2 {
+            font-size: 2rem;
+            padding: 0 0 0.5rem;
+        }
+        & p {
+            padding: 0 0 1rem;
+        }
+    }
 }
