--- a/web/css/body.css
+++ b/web/css/body.css
@@ -16,4 +16,23 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+body .container-apresentacao {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 3rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .container-apresentacao h2 {
+  font-size: 2rem;
+  padding: 0 0 0.5rem;
+}
+
+body .container-apresentacao p {
+  padding: 0 0 1rem;
+}
 /*# sourceMappingURL=body.css.map */
