--- a/web/css/style.css
+++ b/web/css/style.css
@@ -25,16 +25,8 @@ header nav {
 }
 
 header nav a {
-  color: #FFFFFF;
   font-size: 1.2rem;
   font-weight: 600;
-}
-
-header #register-div #register-button {
-  color: #FFFFFF;
-  background: #eb2b63;
-  border-radius: 0.5rem;
-  padding: 0.5rem 1rem;
 }
 
 body {
@@ -56,6 +48,25 @@ body {
   background-size: cover;
 }
 
+body .container-apresentacao {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 3rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .container-apresentacao h2 {
+  font-size: 2rem;
+  padding: 0 0 0.5rem;
+}
+
+body .container-apresentacao p {
+  padding: 0 0 1rem;
+}
+
 *,
 *::before,
 *::after {
@@ -65,6 +76,7 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: century-gothic, sans-serif;
+  color: #FFFFFF;
 }
 
 html {
@@ -82,5 +94,11 @@ a {
 
 a:hover {
   cursor: pointer;
+}
+
+.default-button {
+  background: #eb2b63;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
 }
 /*# sourceMappingURL=style.css.map */
