--- a/web/css/body.css
+++ b/web/css/body.css
@@ -7,6 +7,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  gap: 3rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -15,6 +16,41 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+body .container-slider {
+  overflow: hidden;
+}
+
+body .container-slider .slider {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 3rem;
+  position: relative;
+  left: 10%;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+body .container-slider .slider .slide-div {
+  min-width: 75%;
+  position: relative;
+}
+
+body .container-slider .slider .slide-div img {
+  width: 100%;
+  height: auto;
+}
+
+body .container-slider .slider .slide-div .img-button {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 body .container-apresentacao {
@@ -29,10 +65,10 @@ body .container-apresentacao {
 
 body .container-apresentacao h2 {
   font-size: 2rem;
-  padding: 0 0 0.5rem;
+  padding-bottom: 1rem;
 }
 
 body .container-apresentacao p {
-  padding: 0 0 1rem;
+  padding-bottom: 2rem;
 }
 /*# sourceMappingURL=body.css.map */
