--- a/web/css/body.scss
+++ b/web/css/body.scss
@@ -5,6 +5,7 @@ body {
 
     display: flex;
     flex-direction: column;
+    gap: 3rem;
     align-items: center;
 
     background-color: $primary;
@@ -13,16 +14,53 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 
+    & .container-slider {
+        overflow: hidden;
+
+        & .slider {
+            width: 100%;
+            height: auto;
+
+            display: flex;
+            gap: 3rem;
+
+            position: relative;
+            left: 10%;
+            // left: 10vh;
+
+            transition: .5s;
+            & .slide-div {
+                min-width: 75%;
+                position: relative;
+    
+                & img {
+                    width: 100%;
+                    height: auto;
+                }
+    
+                & .img-button {
+                    position: absolute;
+                    left: 0;
+    
+                    width: 100%;
+                    height: 100%;
+                    background-color: rgba(0, 0, 0, 0.3);
+                }
+            }
+        }
+    }
+
     & .container-apresentacao {
         display: flex;
         gap: 3rem;
         align-items: center;
+
         & h2 {
             font-size: 2rem;
-            padding: 0 0 0.5rem;
+            padding-bottom: 1rem;
         }
         & p {
-            padding: 0 0 1rem;
+            padding-bottom: 2rem;
         }
     }
 }
