--- a/web/css/body.scss
+++ b/web/css/body.scss
@@ -5,14 +5,14 @@ body {
 
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 5rem;
     align-items: center;
 
-    background-color: $primary;
-    background-image: url("images/bg.jpg");
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: $background;
+    // background-image: url("images/bg.jpg");
+    // background-attachment: fixed;
+    // background-repeat: no-repeat;
+    // background-size: cover;
 
     & .container-slider {
         overflow: hidden;
@@ -25,11 +25,11 @@ body {
             gap: 3rem;
 
             position: relative;
-            left: 10%;
-            // left: 10vh;
+            left: -65%;
+            // left: -300% ultimo slide
 
             transition: .5s;
-            & .slide-div {
+            & .slide {
                 min-width: 75%;
                 position: relative;
     
@@ -61,6 +61,108 @@ body {
         }
         & p {
             padding-bottom: 2rem;
+        }
+    }
+
+    & .container-topCollections {
+        overflow: hidden;
+
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+
+        & .header-topCollections {
+            display: flex;
+
+            & .titulo-topCollections {
+                position: relative;
+                left: 5%;
+                margin-right: 80%;
+            }
+
+            & .explore-topCollections {
+                padding: 0.1rem;
+
+                border: solid 1px white;
+                border-radius: 10%;
+            }
+        }
+
+        & .topCollections {
+            width: 30%;
+            height: auto;
+
+            display: flex;
+            gap: 2rem;
+
+            position: relative;
+            left: 5%;
+
+            & .item {
+                min-width: 57%;
+
+                & img {
+                    width: 100%;
+                    height: auto;
+                }
+            }
+        }
+    }
+
+    & .container-popularCases {
+        overflow: hidden;
+
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+
+        & .header-popularCases {
+            display: flex;
+
+            & .titulo-popularCases {
+                position: relative;
+                left: 5%;
+                margin-right: 85%;
+            }
+
+            & .explore-popularCases {
+                padding: 0.1rem;
+
+                border: solid 1px white;
+                border-radius: 10%;
+            }
+        }
+
+        & .popularCases {
+            width: 30%;
+            height: auto;
+
+            display: flex;
+            gap: 2rem;
+
+            position: relative;
+            left: 5%;
+
+            & .item {
+                min-width: 57%;
+
+                display: flex;
+                gap: 0.5rem;
+                flex-direction: column;
+                align-items: center;
+
+                & img {
+                    width: 100%;
+                    height: auto;
+                }
+
+                & .price {
+                    color: limegreen;
+                    padding: 0.2rem;
+                    border: solid 2px limegreen;
+                    border-radius: 10%;
+                }
+            }
         }
     }
 }
