Change .gitignore location
-css e imagens para background

--- a/web/css/header.css
+++ b/web/css/header.css
@@ -2,30 +2,18 @@ header {
   background-color: #011c31;
   padding: 0.7rem 2rem;
   min-width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
-
 header img {
   width: 300px;
 }
-
 header nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 2rem;
 }
-
 header nav a {
   font-size: 1.2rem;
   font-weight: 600;
-}
-/*# sourceMappingURL=header.css.map */
+}/*# sourceMappingURL=header.css.map */
