--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2,28 +2,17 @@ header {
   background-color: #011c31;
   padding: 0.7rem 2rem;
   min-width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
-
 header img {
   width: 300px;
 }
-
 header nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 2rem;
 }
-
 header nav a {
   font-size: 1.2rem;
   font-weight: 600;
@@ -31,47 +20,32 @@ header nav a {
 
 body {
   min-height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   gap: 5rem;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   background-color: #202225;
 }
-
 body .container-slider {
   overflow: hidden;
 }
-
 body .container-slider .slider {
   width: 100%;
   height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 3rem;
   position: relative;
   left: -65%;
-  -webkit-transition: .5s;
-  transition: .5s;
+  transition: 0.5s;
 }
-
 body .container-slider .slider .slide {
   min-width: 75%;
   position: relative;
 }
-
 body .container-slider .slider .slide img {
   width: 100%;
   height: auto;
 }
-
 body .container-slider .slider .slide .img-button {
   position: absolute;
   left: 0;
@@ -79,137 +53,90 @@ body .container-slider .slider .slide .img-button {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
 }
-
 body .container-apresentacao {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 3rem;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 body .container-apresentacao h2 {
   font-size: 2rem;
   padding-bottom: 1rem;
 }
-
 body .container-apresentacao p {
   padding-bottom: 2rem;
 }
-
 body .container-topCollections {
   overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   gap: 1.5rem;
 }
-
 body .container-topCollections .header-topCollections {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 body .container-topCollections .header-topCollections .titulo-topCollections {
   position: relative;
   left: 5%;
   margin-right: 80%;
 }
-
 body .container-topCollections .header-topCollections .explore-topCollections {
   padding: 0.1rem;
   border: solid 1px white;
   border-radius: 10%;
 }
-
 body .container-topCollections .topCollections {
   width: 30%;
   height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 2rem;
   position: relative;
   left: 5%;
 }
-
 body .container-topCollections .topCollections .item {
   min-width: 57%;
 }
-
 body .container-topCollections .topCollections .item img {
   width: 100%;
   height: auto;
 }
-
 body .container-popularCases {
   overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   gap: 1.5rem;
 }
-
 body .container-popularCases .header-popularCases {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 body .container-popularCases .header-popularCases .titulo-popularCases {
   position: relative;
   left: 5%;
   margin-right: 85%;
 }
-
 body .container-popularCases .header-popularCases .explore-popularCases {
   padding: 0.1rem;
   border: solid 1px white;
   border-radius: 10%;
 }
-
 body .container-popularCases .popularCases {
   width: 30%;
   height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 2rem;
   position: relative;
   left: 5%;
 }
-
 body .container-popularCases .popularCases .item {
   min-width: 57%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 0.5rem;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
 }
-
 body .container-popularCases .popularCases .item img {
   width: 100%;
   height: auto;
 }
-
 body .container-popularCases .popularCases .item .price {
   color: limegreen;
   padding: 0.2rem;
@@ -223,8 +150,7 @@ body .container-popularCases .popularCases .item .price {
   /* Afecta a todos los elementos del documento */
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: century-gothic, sans-serif;
   color: #FFFFFF;
 }
@@ -250,5 +176,4 @@ a:hover {
   background: #eb2b63;
   border-radius: 0.5rem;
   padding: 0.5rem 1rem;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
