--- a/web/css/body.scss
+++ b/web/css/body.scss
@@ -2,6 +2,7 @@
 
 body {
     min-height: 100%;
+    min-width: 100%;
 
     display: flex;
     flex-direction: column;
@@ -22,6 +23,7 @@ body {
 
             position: relative;
             left: -65%;
+            //? left: -0%;
             // left: -300% ultimo slide
 
             transition: .5s;
@@ -30,6 +32,7 @@ body {
                 position: relative;
     
                 & img {
+                    display: block;
                     width: 100%;
                     height: auto;
                 }
@@ -37,10 +40,10 @@ body {
                 & .img-button {
                     position: absolute;
                     left: 0;
+                    top: 0;
     
                     width: 100%;
                     height: 100%;
-                    background-color: rgba(0, 0, 0, 0.3);
                 }
             }
         }
@@ -60,104 +63,64 @@ body {
         }
     }
 
-    & .container-topCollections {
-        overflow: hidden;
+    & .topCollections, & .popularCases {
+        width: 30%;
+        height: auto;
 
         display: flex;
-        flex-direction: column;
-        gap: 1.5rem;
+        gap: 2rem;
 
-        & .header-topCollections {
+        position: relative;
+        left: 5%;
+
+        & .item {
+            min-width: 57%;
             display: flex;
+            gap: 0.7rem;
+            flex-direction: column;
+            align-items: center;
 
-            & .titulo-topCollections {
-                position: relative;
-                left: 5%;
-                margin-right: 80%;
+            & img {
+                display: block;
+                width: 100%;
+                height: auto;
             }
 
-            & .explore-topCollections {
-                padding: 0.1rem;
-
-                border: solid 1px white;
+            & .price {
+                color: limegreen;
+                padding: 0.2rem;
+                border: solid 2px limegreen;
                 border-radius: 10%;
-            }
-        }
-
-        & .topCollections {
-            width: 30%;
-            height: auto;
-
-            display: flex;
-            gap: 2rem;
-
-            position: relative;
-            left: 5%;
-
-            & .item {
-                min-width: 57%;
-
-                & img {
-                    width: 100%;
-                    height: auto;
-                }
             }
         }
     }
 
-    & .container-popularCases {
-        overflow: hidden;
+    & .lastNews {
+        width: 94%;
 
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-areas: 
+        "bigImg bigImg"
+        "bigImg bigImg";
         gap: 1.5rem;
 
-        & .header-popularCases {
-            display: flex;
+        position: relative;
+        left: 5%;
 
-            & .titulo-popularCases {
-                position: relative;
-                left: 5%;
-                margin-right: 85%;
-            }
-
-            & .explore-popularCases {
-                padding: 0.1rem;
-
-                border: solid 1px white;
-                border-radius: 10%;
-            }
+        & :first-child {
+            position: relative;
+            top: 0.2rem;
+            grid-area: bigImg;
         }
 
-        & .popularCases {
-            width: 30%;
-            height: auto;
+        & .item {
+            max-width: 100%;
 
-            display: flex;
-            gap: 2rem;
-
-            position: relative;
-            left: 5%;
-
-            & .item {
-                min-width: 57%;
-
-                display: flex;
-                gap: 0.5rem;
-                flex-direction: column;
-                align-items: center;
-
-                & img {
-                    width: 100%;
-                    height: auto;
-                }
-
-                & .price {
-                    color: limegreen;
-                    padding: 0.2rem;
-                    border: solid 2px limegreen;
-                    border-radius: 10%;
-                }
+            & img {
+                display: block;
+                width: 100%;
+                height: auto;
             }
         }
     }
