--- a/web/css/_colors.scss
+++ b/web/css/_colors.scss
@@ -1,6 +1,8 @@
 $primary: #011c31;
 $primaryLight: #023C47;
 $background: #202225;
+$background-perfil1: #002846;
+$background-perfil2: #000f19;
 
 $secondary: #eb2b63;
 
