--- a/web/css/style-index.scss
+++ b/web/css/style-index.scss
@@ -1,5 +1,5 @@
-@import "colors.scss";
-@import "default.scss";
-@import "header.scss";
-@import "body.scss";
-@import "footer.scss";
+@use "colors.scss" as *;
+@use "default.scss" as *;
+@use "header.scss" as *;
+@use "body.scss" as *;
+@use "footer.scss" as *;
