--- a/web/css/style-perfil.scss
+++ b/web/css/style-perfil.scss
@@ -1,5 +1,5 @@
-@import "colors.scss";
-@import "default.scss";
-@import "header.scss";
-@import "body-perfil.scss";
-@import "footer.scss";
+@use "colors.scss" as *;
+@use "default.scss" as *;
+@use "header.scss" as *;
+@use "body-perfil.scss" as *;
+@use "footer.scss" as *;
