--- a/web/css/_body-perfil.scss
+++ b/web/css/_body-perfil.scss
@@ -19,6 +19,7 @@ body {
         & .coluna-esquerda {
             width: 25%;
         }
+
         & .coluna-central {
             width: 50%;
             
@@ -31,45 +32,106 @@ body {
             }
 
             & .container-content {
-                padding: 2rem;
+                margin: 1rem;
                 display: flex;
-                flex-direction: column;
-                gap: 1rem;
+                gap: 2rem;
+                
+                align-items: center;
 
-                & .username {
+                & .img-perfil {
+                    width: 120px;
+                    height: 120px;
+                    clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+
+                    position: relative;
+                    top: -2rem;
+                    right: -1rem;
+                }
+
+                & .container-username {
                     display: flex;
-                    align-items: center;
-    
-                    & .nivel {
-                        color: red;
-                        font-size: 1.2rem;
-                        font-weight: 600;
-                        padding: 5px;
-    
-                        border: solid 2px red;
-                        border-radius: 2px 40% 2px 40%;
-                        
-                        margin-right: 0.7rem;
-                    }
-    
-                    & .name {
-    
-                        & .tag {
-                            color: #0f4069;
+                    flex-direction: column;
+
+                    & .username {
+                        padding: 1.2rem;
+
+                        display: flex;
+                        align-items: center;
+
+                        & .nivel {
+                            color: red;
+                            font-size: 1.2rem;
+                            font-weight: 600;
+                            padding: 5px;
+        
+                            border: solid 2px red;
+                            border-radius: 2px 40% 2px 40%;
+                            
+                            margin-right: 0.7rem;
+                        }
+
+                        & .name {
+        
+                            & .tag {
+                                color: #0f4069;
+                            }
+                        }
+
+                        & .edit-profile {
+                            font-size: 0.8rem;
+                            margin-left: auto;
+                            margin-right: 0;
                         }
                     }
-    
-                    & .edit-profile {
-                        font-size: 0.8rem;
-                        margin-left: 65%;
-                    }
                 }
+
     
                 & .bio {
                     padding: 1.2rem;
                     background-color: $primary;
     
-                    border-radius: 15px;
+                    border-radius: 1rem;
+                }
+            }
+
+            & .galeria {
+                margin: 1rem;
+                padding: 2rem;
+
+                background-color: $primary;
+                border-radius: 1rem;
+
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+
+                & .galeria-header {
+                    display: flex;
+                    justify-content: space-between;
+
+                    & a {
+                        font-size: 1.5rem;
+                    }
+                }
+
+                & .imagens {
+                    display: flex;
+                    gap: 2rem;
+
+                    & img {
+                        width: 80%;
+                        height: auto;
+                    }
+                }
+
+                & .galeria-footer {
+                    margin-left: auto;
+                    margin-right: 0;
+
+                    & .arrows {
+                        text-align: center;
+                        font-size: 1.5rem;
+                    }
                 }
             }
         }
