--- a/web/css/_default.scss
+++ b/web/css/_default.scss
@@ -49,8 +49,11 @@ a:hover {
         }
 
         & .default-container-explore {
-            position: absolute;
-            left: 93%;
+            margin-left: auto;
+            margin-right: 0;
+
+            position: relative;
+            right: 1.5%;
 
             padding: 0.1rem;
 
