--- a/web/css/_body-perfil.scss
+++ b/web/css/_body-perfil.scss
@@ -1,14 +1,15 @@
 @use "colors.scss" as *;
 
 body {
-    min-height: 100%;
     min-width: 100%;
+    min-height: 100%;
 
     display: flex;
     flex-direction: column;
     align-items: center;
 
     background-image: linear-gradient($background-perfil1, $background-perfil2);
+    background-attachment: fixed;
 
     & .container-princ {
         display: flex;
@@ -29,111 +30,124 @@ body {
             & .banner-perfil img {
                 width: 100%;
                 height: auto;
+
+                display: block;
             }
 
             & .container-content {
-                margin: 1rem;
-                display: flex;
-                gap: 2rem;
-                
-                align-items: center;
-
-                & .img-perfil {
-                    width: 120px;
-                    height: 120px;
-                    clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
-
-                    position: relative;
-                    top: -2rem;
-                    right: -1rem;
-                }
-
-                & .container-username {
-                    display: flex;
-                    flex-direction: column;
-
-                    & .username {
-                        padding: 1.2rem;
-
-                        display: flex;
-                        align-items: center;
-
-                        & .nivel {
-                            color: red;
-                            font-size: 1.2rem;
-                            font-weight: 600;
-                            padding: 5px;
-        
-                            border: solid 2px red;
-                            border-radius: 2px 40% 2px 40%;
-                            
-                            margin-right: 0.7rem;
-                        }
-
-                        & .name {
-        
-                            & .tag {
-                                color: #0f4069;
-                            }
-                        }
-
-                        & .edit-profile {
-                            font-size: 0.8rem;
-                            margin-left: auto;
-                            margin-right: 0;
-                        }
-                    }
-                }
-
-    
-                & .bio {
-                    padding: 1.2rem;
-                    background-color: $primary;
-    
-                    border-radius: 1rem;
-                }
-            }
-
-            & .galeria {
-                margin: 1rem;
-                padding: 2rem;
-
-                background-color: $primary;
-                border-radius: 1rem;
-
                 display: flex;
                 flex-direction: column;
-                gap: 1rem;
+                gap: 2rem;
 
-                & .galeria-header {
-                    display: flex;
-                    justify-content: space-between;
-
-                    & a {
-                        font-size: 1.5rem;
-                    }
-                }
-
-                & .imagens {
+                padding: 0 2rem 2rem 2rem;
+                
+                & .container-user {
                     display: flex;
                     gap: 2rem;
+                    align-items: center;
+    
+                    & .img-perfil {
+                        width: 120px;
+                        height: 120px;
+                        clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+    
+                        position: relative;
+                        top: -2rem;
+                        right: -1rem;
+                    }
+    
+                    & .container-username {
+                        display: flex;
+                        flex-direction: column;
 
-                    & img {
-                        width: 80%;
-                        height: auto;
+                        width: 100%;
+    
+                        & .username {
+                            padding: 1.2rem;
+    
+                            display: flex;
+                            align-items: center;
+    
+                            & .nivel {
+                                color: red;
+                                font-size: 1.2rem;
+                                font-weight: 600;
+                                padding: 5px 7px;
+            
+                                border: solid 2px red;
+                                border-radius: 2px 40% 2px 40%;
+                                
+                                margin-right: 0.7rem;
+                            }
+    
+                            & .name {
+            
+                                & .tag {
+                                    margin-left: 2px;
+                                    color: #0f4069;
+                                }
+                            }
+    
+                            & .edit-profile {
+                                font-size: 0.8rem;
+                                margin-left: auto;
+                                margin-right: 0;
+                            }
+                        }
+                    }
+    
+        
+                    & .bio {
+                        padding: 1.2rem;
+                        background-color: $primary;
+        
+                        border-radius: 1rem;
                     }
                 }
+    
+                & .galeria {
+                    padding: 2rem;
+    
+                    background-color: $primary;
+                    border-radius: 1rem;
+    
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1rem;
+    
+                    & .galeria-header {
+                        display: flex;
+                        justify-content: space-between;
+    
+                        & a {
+                            font-size: 1.5rem;
+                        }
+                    }
+    
+                    & .imagens {
+                        display: flex;
+                        gap: 2rem;
 
-                & .galeria-footer {
-                    margin-left: auto;
-                    margin-right: 0;
+                        & img {
+                            width: 100%;
+                            height: auto;
 
-                    & .arrows {
-                        text-align: center;
-                        font-size: 1.5rem;
+                            border-radius: 0.5rem;
+                        }
+                    }
+    
+                    & .galeria-footer {
+                        margin-left: auto;
+                        margin-right: 0;
+    
+                        & .arrows {
+                            text-align: center;
+                            font-size: 1.5rem;
+                        }
                     }
                 }
             }
+
         }
 
         & .coluna-direita {
