Add Trending, Inventory, Badges
perfil.html:
+trending
+inventory
+badges

Outros:
=fix html height -> min-height
=colunas em perfil -> grid

--- a/web/css/_colors.scss
+++ b/web/css/_colors.scss
@@ -1,8 +1,9 @@
+// $primary: #16202a;
 $primary: #011c31;
 $primaryLight: #023C47;
 $background: #202225;
 $background-perfil1: #002846;
-$background-perfil2: #000f19;
+$background-perfil2: #001828;
 
 $secondary: #eb2b63;
 
