--- a/web/css/_body-perfil.scss
+++ b/web/css/_body-perfil.scss
@@ -9,21 +9,51 @@ body {
     align-items: center;
 
     background-image: linear-gradient($background-perfil1, $background-perfil2);
-    background-attachment: fixed;
+    background-repeat: no-repeat;
 
     & .container-princ {
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr 2fr 1fr;
 
-        height: 100%;
         width: 100%;
 
         & .coluna-esquerda {
-            width: 25%;
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+
+            padding: 2rem;
+
+            & .trending {
+                background-color: $primary;
+                border-radius: 1rem;
+                padding: 1.5rem;
+
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 1rem;
+
+                & li {
+                    display: flex;
+                    align-items: center;
+                    gap: 1rem;
+
+                    margin-bottom: 0.7rem;
+
+                    & img {
+                        width: 35px;
+                        height: 35px;
+                        border-radius: 50%;
+
+                        margin-left: auto;
+                        margin-right: 0;
+                    }
+                }
+            }
         }
 
         & .coluna-central {
-            width: 50%;
-            
             background: $background-perfil1;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 
@@ -43,8 +73,8 @@ body {
                 
                 & .container-user {
                     display: flex;
-                    gap: 2rem;
                     align-items: center;
+                    gap: 2rem;
     
                     & .img-perfil {
                         width: 120px;
@@ -104,6 +134,83 @@ body {
                         border-radius: 1rem;
                     }
                 }
+
+                & .inventario {
+                    padding: 2rem;
+    
+                    background-color: $primary;
+                    border-radius: 1rem;
+    
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1rem;
+
+                    & .inventario-header {
+                        display: flex;
+                        justify-content: space-between;
+    
+                        & a {
+                            font-size: 1.5rem;
+                        }
+                    }
+
+                    & .imagens {
+                        div:first-child {
+                            margin-bottom: 0.8rem;
+                        }
+
+                        & .fileira-cima, & .fileira-baixo {
+                            display: flex;
+                            gap: 0.8rem;
+    
+                            & img {
+                                width: 100%;
+                                height: 100%;
+                                border-radius: 0.5rem;
+                            }
+                        }
+                    }
+                    
+                    & .inventario-footer {
+                        margin-left: auto;
+                        margin-right: 0;
+                    }
+                }
+
+                & .badges {
+                    padding: 2rem;
+    
+                    background-color: $primary;
+                    border-radius: 1rem;
+    
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1rem;
+
+                    & .badges-header {
+                        display: flex;
+                        justify-content: space-between;
+    
+                        & a {
+                            font-size: 1.5rem;
+                        }
+                    }
+
+                    & .imagens {
+                        display: flex;
+                        gap: 2rem;
+
+                        & img {
+                            width: 100%;
+                            height: auto;
+                        }
+                    }
+
+                    & .badges-footer {
+                        margin-left: auto;
+                        margin-right: 0;
+                    }
+                }
     
                 & .galeria {
                     padding: 2rem;
@@ -151,7 +258,6 @@ body {
         }
 
         & .coluna-direita {
-            width: 25%;
         }
     }
 }
