Add Achievements, Friends, Comments, Gallery -> slider
perfil.html:
+achievements
+friends
+comments
=gallery is now a slider

Outros:
=links do header agora redirecionam para sua respectiva página
index.html:
=imagens do slider agora são links
=fix da função sliderAuto(), agora funciona corretamente
perfil.html:
=itens do trending e news agora são links
=fix svg da foto de perfil (bordas redondas)
='Showcase' em footer de containers agora é um link

--- a/web/css/_header.scss
+++ b/web/css/_header.scss
@@ -8,6 +8,8 @@ header {
     display: flex;
     align-items: center;
 
+    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+
     & a {
         width: 25%;
         & img {
