--- a/web/css/_body-perfil.scss
+++ b/web/css/_body-perfil.scss
@@ -34,7 +34,13 @@ body {
                 align-items: center;
                 gap: 1rem;
 
+                box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+
                 & li {
+                    list-style: none;
+                }
+
+                & a {
                     display: flex;
                     align-items: center;
                     gap: 1rem;
@@ -60,6 +66,8 @@ body {
                 flex-direction: column;
                 align-items: center;
                 gap: 1rem;
+
+                box-shadow: 0 0 10px rgba(0, 0, 0, .2);
 
                 & li {
                     list-style: none;
@@ -100,7 +108,7 @@ body {
                     & .img-perfil {
                         width: 120px;
                         height: 120px;
-                        clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+                        clip-path: url(#clipPath);
     
                         position: relative;
                         top: -2rem;
@@ -149,9 +157,9 @@ body {
     
         
                     & .bio {
+                        line-height: 1.5;
                         padding: 1.2rem;
                         background-color: $primary;
-        
                         border-radius: .5rem;
                     }
                 }
@@ -251,6 +259,79 @@ body {
                             font-size: 1.5rem;
                         }
                     }
+
+                    & .container-slider {
+                        display: flex;
+                        justify-content: center;
+                        overflow: hidden;
+                
+                        & .handle {
+                            border: none;
+                            border-radius: 0.3rem;
+                            flex-grow: 0;
+                            background-color: rgba(0, 0, 0, 0.25);
+                            z-index: 10;
+                            margin: .25rem 0;
+                            padding: 0 0.5rem;
+                            cursor: pointer;
+                            font-size: 5rem;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            color: white;
+                            line-height: 0;
+                            transition: background-color .7s ease-in-out;
+                
+                            & .text {
+                                transition: transform 150ms ease-in-out;
+                            }
+                
+                            &:hover,
+                            &:focus {
+                                background-color: rgba(0, 0, 0, 0.5);
+                            }
+                            &:hover .text,
+                            &:focus .text {
+                                transform: scale(1.2);
+                            }
+                        }
+                        
+                        .left-handle {
+                            border-top-left-radius: 0;
+                            border-bottom-left-radius: 0;
+                        }
+                        
+                        .right-handle {
+                            border-top-right-radius: 0;
+                            border-bottom-right-radius: 0;
+                        }
+                
+                        & .slider {
+                            --slider-index: 0;
+                            display: flex;
+                            flex-grow: 1;
+                            margin: 0 0.25rem;
+                            transform: translate(calc(var(--slider-index) * -100%));
+                            transition: transform 250ms ease-in-out;
+                
+                            & a {
+                                flex: 0 0 50%;
+                                padding: .25rem;
+                                max-width: 100%;
+                                & img {
+                                    width: 100%;
+                                    height: auto;
+                                    border-radius: 0.3rem;
+                
+                                    transition: opacity .2s ease-in-out;
+                                    &:hover {
+                                        opacity: .6;
+                                    }
+                                }
+                            }
+                        }
+                        
+                    }
     
                     & .imagens {
                         display: flex;
@@ -274,11 +355,179 @@ body {
                         }
                     }
                 }
+
+                & .comments {
+                    padding: 2rem;
+    
+                    background-color: $primary;
+                    border-radius: .5rem;
+    
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1rem;
+
+                    & .comments-header {
+                        display: flex;
+                        justify-content: space-between;
+    
+                        & a {
+                            font-size: 1.5rem;
+                        }
+                    }
+
+                    & .comments-list, & .write-comment {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 1.5rem;
+
+                        & .comment-container {
+                            display: flex;
+                            gap: 1rem;
+
+                            & img {
+                                width: 3rem;
+                                height: 3rem;
+                                border-radius: 50%;
+                            }
+                            
+                            & .textarea-comment {
+                                border: none;
+                                resize: none;
+                            }
+                            & .comment, & .textarea-comment {
+                                width: 100%;
+                                background-color: $background-perfil1;
+                                padding: 1rem;
+                                border-radius: .5rem;
+                            }
+
+                            & h3 {
+                                margin-bottom: .4rem;
+                            }
+                            
+                        }
+
+                    }
+
+
+                    & .comments-footer {
+                        margin-left: auto;
+                        margin-right: 0;
+
+                        & a {
+                            width: 1rem;
+                        }
+                    }
+                }
             }
 
         }
 
         & .coluna-direita {
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+
+            padding: 2rem;
+
+            & .achievements {
+                padding: 2rem;
+
+                background-color: $primary;
+                border-radius: .5rem;
+
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+
+                box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+
+                & .achievements-header {
+                    display: flex;
+                    justify-content: space-between;
+
+                    & a {
+                        font-size: 1.5rem;
+                    }
+                }
+
+                & .imagens {
+                    display: flex;
+                    gap: 1rem;
+
+                    & img {
+                        width: 100%;
+                        height: auto;
+
+                        border-radius: .5rem;
+                    }
+                }
+
+                & .achievements-level-up {
+                    width: 100%;
+                    display: flex;
+
+                    & progress {
+                        width: 100%;
+                    }
+                    & img {
+                        width: 10%;
+                        height: auto;
+                    }
+                }
+
+                & .achievements-footer {
+                    text-align: center;
+                }
+            }
+
+            & .friends {
+                background-color: $primary;
+                border-radius: .5rem;
+                padding: 1.5rem;
+
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 1rem;
+
+                box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+
+                & ul {
+                    min-width: 100%;
+                }
+                & li {
+                    list-style: none;
+                    // min-width: 100%;
+                    & a {
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        gap: 1rem;
+                        
+                        margin-bottom: .7rem;
+                        
+                        & img {
+                            width: 35px;
+                            height: 35px;
+                            border-radius: 50%;
+                        }
+                        & .nivel {
+                            min-width: 25px;
+                            height: auto;
+                            color: red;
+                            font-size: .7rem;
+                            font-weight: 600;
+                            padding: 5px;
+        
+                            border: solid 2px red;
+                            border-radius: 2px 40% 2px 40%;
+                        }
+                    }
+                }
+                
+            }
+
         }
     }
 }
