--- a/web/css/_body.scss
+++ b/web/css/_body.scss
@@ -18,7 +18,7 @@ body {
 
         & .handle {
             border: none;
-            border-radius: 1rem;
+            border-radius: 0.3rem;
             flex-grow: 0;
             background-color: rgba(0, 0, 0, 0.25);
             z-index: 10;
@@ -65,13 +65,21 @@ body {
             transform: translate(calc(var(--slider-index) * -100%));
             transition: transform 250ms ease-in-out;
 
-            & img {
-                /* width: 25%; */
+            & a {
                 flex: 0 0 100%;
+                padding: .25rem;
                 max-width: 100%;
                 aspect-ratio: 16/4;
-                padding: .25rem;
-                border-radius: 0.3rem;
+                & img {
+                    width: 100%;
+                    height: auto;
+                    border-radius: 0.3rem;
+
+                    transition: opacity .2s ease-in-out;
+                    &:hover {
+                        opacity: .6;
+                    }
+                }
             }
         }
         
@@ -103,26 +111,23 @@ body {
     }
 
     & .topCollections, & .popularCases {
-        width: 30%;
+        width: 100%;
         height: auto;
 
         display: flex;
         gap: 2rem;
 
-        position: relative;
-        left: 5%;
-
         & .item {
-            min-width: 57%;
             display: flex;
             gap: 0.7rem;
             flex-direction: column;
             align-items: center;
-
+            
             & img {
                 display: block;
                 width: 100%;
                 height: auto;
+                border-radius: 0.1rem;
             }
 
             & .price {
@@ -135,7 +140,7 @@ body {
     }
 
     & .lastNews {
-        width: 94%;
+        width: 100%;
 
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -143,9 +148,6 @@ body {
         "bigImg bigImg"
         "bigImg bigImg";
         gap: 1.5rem;
-
-        position: relative;
-        left: 5%;
 
         & :first-child {
             position: relative;
