--- a/web/css/_default.scss
+++ b/web/css/_default.scss
@@ -40,6 +40,8 @@ a:hover {
     position: relative;
     overflow: hidden;
 
+    padding-inline: 2rem;
+
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -49,21 +51,18 @@ a:hover {
         display: flex;
 
         & .default-container-titulo {
-            position: relative;
-            left: 5%;
+            margin-left: .5rem;
+            margin-right: auto;
         }
 
         & .default-container-explore {
             margin-left: auto;
-            margin-right: 0;
+            margin-right: .5rem;
 
-            position: relative;
-            right: 1.5%;
-
-            padding: 0.1rem;
+            padding: 0.2rem;
 
             border: solid 1px white;
-            border-radius: 10%;
+            border-radius: 0.3rem;
         }
     }
 }
