--- a/web/css/_body-perfil.scss
+++ b/web/css/_body-perfil.scss
@@ -84,7 +84,7 @@ body {
 
         & .coluna-central {
             background: $background-perfil1;
-            box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+            box-shadow: 0 0 15px rgba(0, 0, 0, .2);
 
             & .banner-perfil img {
                 width: 100%;
@@ -188,7 +188,7 @@ body {
                             margin-bottom: .8rem;
                         }
 
-                        & .fileira-cima, & .fileira-baixo {
+                        & .fileira {
                             display: flex;
                             gap: .8rem;
     
