--- a/web/css/_colors.scss
+++ b/web/css/_colors.scss
@@ -5,6 +5,7 @@ $background: #202225;
 $background-perfil1: #002846;
 $background-perfil2: #001828;
 
+$button: #485158;
 $button-bg: #eb2b63;
 $button-bg-hover: #cd2555;
 
