--- a/web/css/_default.scss
+++ b/web/css/_default.scss
@@ -15,6 +15,10 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    min-height: 100vh;
+}
+
 a {
     text-decoration: none;
     user-select: none;
