Add trade pages
+trade-history.html
+trade-pendent-offers.html
=trades -> trade-sent-offers.html

--- a/web/css/style-trade-pendent-offers.scss
+++ b/web/css/style-trade-pendent-offers.scss
@@ -1,5 +1,5 @@
 @use "colors.scss" as *;
 @use "default.scss" as *;
 @use "header.scss" as *;
-@use "body-trades.scss" as *;
+@use "body-trade-pendent-offers.scss" as *;
 @use "footer.scss" as *;
